[package]
name = "pacm_rusty_jsc"
version = "0.1.0"
description = "Rust bindings for the JavaScriptCore engine"
keywords = [ "javascriptcore", "javascript", "pacmjs" ]
authors = [ "Wasmer Engineering Team <engineering@wasmer.io>", "Pekka Enberg", "Adrien Zinger" ]
license = "MIT"
repository = "https://github.com/pacmjs/rusty_jsc"
edition = "2021"

[lib]

[dependencies]
pacm_rusty_jsc_macros = { path = "./macros", version = "0.1.0" }
pacm_rusty_jsc_sys = { path = "./sys", version = "0.1.0" }
